other-mpol/always-pull-images/.chainsaw-test/ephemeral-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ephemeral-update-pod
  namespace: default
spec:
  containers: [{name: app, image: nginx:latest}]
