other-mpol/always-pull-images/.chainsaw-test/ephemeral-rbac.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:admission-controller:always-pull-images-ephemeral
  labels:
    rbac.kyverno.io/aggregate-to-admission-controller: "true"
rules:
- apiGroups: [""]
  resources: [pods/ephemeralcontainers]
  verbs: [get, list, watch, update]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno:reports-controller:always-pull-images-ephemeral
  labels:
    rbac.kyverno.io/aggregate-to-reports-controller: "true"
rules:
- apiGroups: [""]
  resources: [pods/ephemeralcontainers]
  verbs: [get, list, watch]
