other-mpol/always-pull-images/.chainsaw-test/patched-pod03.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod03
spec:
  containers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox01
      imagePullPolicy: Always
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: busybox02
      imagePullPolicy: Always
  initContainers:
    - image: ghcr.io/kyverno/test-busybox:1.35
      name: init-busybox
      imagePullPolicy: Always
